a bit of cleaning up and changes to how i like them.

--- a/ansible-playbooks/main.yml
+++ b/ansible-playbooks/main.yml
@@ -5,12 +5,12 @@
   sudo_user: root
 
   roles:
-    - role: ansible-nginx
-    - role: ansible-softwares
-    - role: ansible-mongodb
-    - role: DavidWittman.redis
-    - role: ansible-nodejs
-    - role: ansible-nodejs-apps
+    # - role: ansible-nginx
+    # - role: ansible-softwares
+    # - role: ansible-mongodb
+    # - role: DavidWittman.redis
+    # - role: ansible-nodejs
+    # - role: ansible-nodejs-apps
       # apps:
       #   enabled:
       #     - "/srv/myapp/"
