--- a/ansible-playbooks/main.yml
+++ b/ansible-playbooks/main.yml
@@ -5,17 +5,17 @@
   sudo_user: root
 
   vars:
-    mongodb_user_admin_name: admin
+    mongodb_user_admin_name: userAdmin
     mongodb_user_admin_password: admin
+    mongodb_root_admin_name: rootAdmin
+    mongodb_root_admin_password: admin
     nodejs_version: 5.10
-    # mongodb_security_authorization: true
-    # mongodb_users:
-    #   - {
-    #     name: test,
-    #     password: test,
-    #     roles: readWrite,
-    #     database: test
-    # }
+    mongodb_security_authorization: enabled
+    mongodb_users:
+      - name: test
+        password: developer
+        roles: [readWrite, dbAdmin]
+        database: testdb
 
   roles:
     - ansible_nodejs_5x
